// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clip renders 0 1`] = `
Array [
  .c0 {
  -webkit-clip: 0;
  clip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: 0;
  clip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: 0;
  clip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: 0;
  clip: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders function 1`] = `
Array [
  .c0 {
  -webkit-clip: hasnot;
  clip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: has;
  clip: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: hasnot;
  clip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: has;
  clip: has;
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-clip: invalid.path.1;
  clip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: invalid.path.1;
  clip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: invalid.path.1;
  clip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: invalid.path.1;
  clip: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders negative number 1`] = `
Array [
  .c0 {
  -webkit-clip: -54881;
  clip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: -54881;
  clip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: -42365;
  clip: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: -42365;
  clip: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-clip: July;
    clip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: August;
    clip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: September;
    clip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip: November;
    clip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-clip: July;
    clip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: August;
    clip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: September;
    clip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip: November;
    clip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: May;
    clip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: June;
    clip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: April;
    clip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip: November;
    clip: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: May;
    clip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: June;
    clip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip: April;
    clip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip: November;
    clip: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-clip: July;
    clip: July;
  }
}

@media April {
  .c0 {
    -webkit-clip: August;
    clip: August;
  }
}

@media January {
  .c0 {
    -webkit-clip: September;
    clip: September;
  }
}

@media April {
  .c0 {
    -webkit-clip: November;
    clip: November;
  }
}

@media June {
  .c0 {
    -webkit-clip: August;
    clip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-clip: July;
    clip: July;
  }
}

@media April {
  .c0 {
    -webkit-clip: August;
    clip: August;
  }
}

@media January {
  .c0 {
    -webkit-clip: September;
    clip: September;
  }
}

@media April {
  .c0 {
    -webkit-clip: November;
    clip: November;
  }
}

@media June {
  .c0 {
    -webkit-clip: August;
    clip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip: January;
    clip: January;
  }
}

@media April {
  .c0 {
    -webkit-clip: December;
    clip: December;
  }
}

@media January {
  .c0 {
    -webkit-clip: April;
    clip: April;
  }
}

@media April {
  .c0 {
    -webkit-clip: May;
    clip: May;
  }
}

@media June {
  .c0 {
    -webkit-clip: June;
    clip: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip: January;
    clip: January;
  }
}

@media April {
  .c0 {
    -webkit-clip: December;
    clip: December;
  }
}

@media January {
  .c0 {
    -webkit-clip: April;
    clip: April;
  }
}

@media April {
  .c0 {
    -webkit-clip: May;
    clip: May;
  }
}

@media June {
  .c0 {
    -webkit-clip: June;
    clip: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-clip: 54881;
  clip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: 54881;
  clip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: 42365;
  clip: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: 42365;
  clip: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders string 1`] = `
Array [
  .c0 {
  -webkit-clip: July;
  clip: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: July;
  clip: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: June;
  clip: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: June;
  clip: June;
}

<div
    className="c0"
  />,
]
`;

exports[`clip renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-clip: DarkSlateBlue;
  clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: DarkSlateBlue;
  clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: DarkSlateBlue;
  clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip: DarkSlateBlue;
  clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
